include/jls/format.h

/**
 * @brief The signal type definition.
 */
enum jls_signal_type_e {
    /// Fixed sampling rate
    JLS_SIGNAL_TYPE_FSR = 0,
    /// Variable sampling rate
    JLS_SIGNAL_TYPE_VSR = 1,
};
/**
 * @brief The data storage type.
 *
 * The data storage type applies to directly user-accessible data including
 * annotations and user_data.
 */
enum jls_storage_type_e {
    /// Invalid (unknown) storage type.
    JLS_STORAGE_TYPE_INVALID = 0,
    /// Raw binary data.
    JLS_STORAGE_TYPE_BINARY = 1,
    /// Null-terminated C-style string with UTF-8 encoding.
    JLS_STORAGE_TYPE_STRING = 2,
    /// JSON serialized data structure with NULL terminator and UTF-8 encoding.
    JLS_STORAGE_TYPE_JSON = 3,
};
/**
 * @brief The available annotation types.
 */
enum jls_annotation_type_e {
    /**
     * @brief Arbitrary user data.
     *
     * Application-dependent data with no standardized form or purpose.
     */
    JLS_ANNOTATION_TYPE_USER = 0,

    /**
     * @brief UTF-8 formatted text.
     *
     * Viewers should display this text at the appropriate location.
     * The jls_storage_type_e must be STRING.
     */
    JLS_ANNOTATION_TYPE_TEXT = 1,

    /**
     * @brief A vertical marker at a given time.
     *
     * Marker names can be arbitrary, but the convention is:
     * - Number strings, like "1", represent a single marker.
     * - Alpha + number string, like "A1" and "A2", represent
     *   a marker pair (dual markers).
     * The jls_storage_type_e must be STRING.
     */
    JLS_ANNOTATION_TYPE_MARKER = 2,

    /// consider sample_loss: start, stop
};
struct jls_source_def_s {
    // store unique source_id in chunk_meta
    uint16_t source_id;          // 0 reserved for global annotations, must be unique per instance
    // on disk: reserve 64 bytes as 0 for future use
    const char * name;
    const char * vendor;
    const char * model;
    const char * version;
    const char * serial_number;
};
struct jls_signal_def_s {       // 0 reserved for VSR annotations
    // store unique signal_id in chunk_meta
    uint16_t signal_id;                 // 0 to JLS_SIGNAL_COUNT - 1, must be unique per instance
    uint16_t source_id;                 // must match a source_def
    uint8_t signal_type;                // jls_signal_type_e
    uint16_t rsv16_0;                   // JLS_DATATYPE_*
    uint32_t data_type;                 //
    uint32_t sample_rate;               // 0 for VSR
    uint32_t samples_per_data;          // suggestion, will be rounded
    uint32_t sample_decimate_factor;    // definite
    uint32_t entries_per_summary;       // suggestion, will be rounded
    uint32_t summary_decimate_factor;   // definite
    uint32_t annotation_decimate_factor;
    uint32_t utc_decimate_factor;
    // on disk: reserve 64 bytes as 0 for future use
    const char * name;                  // The signal name
    const char * units;                 // The units string, normally as SI with no scale prefix.
};
/// The summary storage order for each entry
enum jls_summary_fsr_e {
    JLS_SUMMARY_FSR_MEAN = 0,
    JLS_SUMMARY_FSR_STD = 1,
    JLS_SUMMARY_FSR_MIN = 2,
    JLS_SUMMARY_FSR_MAX = 3,
    JLS_SUMMARY_FSR_COUNT = 4,   // must be last
};
/**
 * @brief Hold a single annotation record.
 *
 * This structure is used by both the API and JLS_TAG_TRACK_ANNOTATION_DATA.
 */
struct jls_annotation_s {
    int64_t timestamp;          ///< The timestamp for this annotation.  sample_id for FSR, UTC for VSR.
    uint64_t rsv64_1;           ///< Reserved, write to 0.
    uint8_t annotation_type;    ///< The jls_annotation_type_e.
    uint8_t storage_type;       ///< The jls_storage_type_e.
    uint8_t group_id;           ///< The optional group identifier.  If unused, write to 0.
    uint8_t rsv8_1;             ///< Reserved, write to 0.
    float y;                    ///< The y-axis value or NAN to automatically position.
    uint32_t data_size;         ///< The size of data in bytes.
    uint8_t data[];             ///< The annotation data.
};
/**
 * @brief The entry format for JLS_TAG_TRACK_UTC_SUMMARY.
 *
 * @see jls_utc_summary_s
 *
 * This same format is reused for summary entries.
 * UTC.DATA only exists to provide recovery in the event that the
 * file is not properly closed.
 */
struct jls_utc_summary_entry_s {
    int64_t sample_id;         ///< The timestamp in sample ids (duplicates INDEX).
    int64_t timestamp;         ///< The timestamp in UTC.
};