include/jls/threaded_writer.h

/**
 * @ingroup jls
 * @defgroup jls_threaded_writer Threaded writer
 *
 * @brief JLS threaded writer.
 *
 * This module wraps writer. 
 * 
 * @{
 */

JLS_CPP_GUARD_START

// opaque object
struct jls_twr_s;
JLS_API int32_t jls_twr_open(struct jls_twr_s ** instance, const char * path);
JLS_API int32_t jls_twr_close(struct jls_twr_s * self);
JLS_API int32_t jls_twr_flush(struct jls_twr_s * self);
JLS_API int32_t jls_twr_source_def(struct jls_twr_s * self, const struct jls_source_def_s * source);
JLS_API int32_t jls_twr_signal_def(struct jls_twr_s * self, const struct jls_signal_def_s * signal);
JLS_API int32_t jls_twr_user_data(struct jls_twr_s * self, uint16_t chunk_meta,
        enum jls_storage_type_e storage_type, const uint8_t * data, uint32_t data_size);
JLS_API int32_t jls_twr_annotation(struct jls_twr_s * self, uint16_t signal_id, int64_t timestamp,
        float y,
        enum jls_annotation_type_e annotation_type,
        uint8_t group_id,
        enum jls_storage_type_e storage_type,
        const uint8_t * data, uint32_t data_size);
JLS_API int32_t jls_twr_utc(struct jls_twr_s * self, uint16_t signal_id, int64_t sample_id, int64_t utc);